Document radiology export contract and scripts
Changed files:\n- package.json\n- docs/RADIOLOGY_EXPORT_VERIFICATION_CONTRACT.md\n- tools/radiology-verifier/README.md\n- tools/forensic-verifier/verify-v1.1.cjs

Rationale:\n- Provide a documented verification contract for radiology export packs.\n- Add npm scripts to run the radiology verifier consistently.\n- Expose a stable forensic verifier entrypoint without wiring it into runtime scripts.

Verification:\n- npm run verify:radiology\n- npm run preflight\n- node tools/forensic-verifier/verify-v1.1.cjs artifacts/export_unpack --json || true

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npm --prefix frontend run build",
     "preview": "npm --prefix frontend run preview",
     "verify:index": "bash scripts/preflight.sh",
-    "preflight": "bash scripts/preflight.sh",
+    "verify:radiology": "node tools/radiology-verifier/verify-v1.0.cjs artifacts/export_unpack",
+    "verify:research": "npm run verify:radiology",
+    "preflight": "bash scripts/preflight.sh && bash scripts/no-forensic-imports.sh",
     "support:pack": "bash scripts/support-pack.sh",
     "setup:inbreast": "bash scripts/setup-inbreast.sh",
     "link:inbreast": "bash scripts/link-inbreast.sh"
