Add integrity checks and verifier scripts
Files changed:\n- docs/RADIOLOGY_EXPORT_VERIFICATION_CONTRACT.md\n- package.json\n- tools/radiology-verifier/verify-v1.0.cjs\n\nRationale:\n- verify manifest integrity when checksums are present\n- validate ledger chain hashes using exporter-aligned hashing\n- wire verifier scripts for deterministic checks\n\nVerify:\n- npm run verify:radiology\n- bash scripts/no-forensic-imports.sh\n- npm --prefix frontend run build\n- node tools/forensic-verifier/verify-v1.1.cjs tools/radiology-verifier/fixtures/pack-valid-mini --json || true

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "npm --prefix frontend run preview",
     "verify:index": "bash scripts/preflight.sh",
     "preflight": "bash scripts/preflight.sh",
+    "verify:radiology": "node tools/radiology-verifier/verify-v1.0.cjs tools/radiology-verifier/fixtures/pack-valid-mini",
     "support:pack": "bash scripts/support-pack.sh",
     "setup:inbreast": "bash scripts/setup-inbreast.sh",
     "link:inbreast": "bash scripts/link-inbreast.sh",
-    "verify:research": "node tools/radiology-verifier/verify-radiology.cjs artifacts/export_unpack"
+    "verify:research": "npm run verify:radiology"
   }
 }
