Add caseId to milestone events

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "verify:milestone-caseid": "tsx src/verify/milestone_caseid_check.ts"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
