--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "setup:inbreast": "bash scripts/setup-inbreast.sh",
     "link:inbreast": "bash scripts/link-inbreast.sh",
     "verify:read-episodes": "node src/verify/read_episode_check.mjs",
+    "verify:milestone-caseid": "npm --prefix frontend run verify:milestone-caseid",
     "verify:radiology": "node tools/radiology-verifier/verify-radiology.cjs tools/radiology-verifier/fixtures/pack-valid-mini",
     "verify:research": "npm run verify:radiology"
   }
